apps/cinephage/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinephage-dev
  namespace: media
  labels:
    app: cinephage-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cinephage-dev
  template:
    metadata:
      labels:
        app: cinephage-dev
    spec:
      containers:
        - name: cinephage-dev
          image: ghcr.io/keonramses/cinephage:dev-20260228-178
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
            - mountPath: /tm-downloads
              name: tm-downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: cinephage-dev-config
        - name: media
          persistentVolumeClaim:
            claimName: plex-media
        - name: tm-downloads
          persistentVolumeClaim:
            claimName: transmission-downloads
