apps/cinephage/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinephage-dev
  namespace: media
spec:
  selector:
    app: cinephage-dev
  ports:
    - port: 3000
      targetPort: 3000
